Added FPGA structure changes

--- a/anhang.tex
+++ b/anhang.tex
@@ -241,3 +241,7 @@ struct pointer_traits
                             the lack of a feature to otherwise extract the
                             address space becomes a major obstacle.
 \end{otherlanguage}
+
+\section{Diskussionen mit Xilinx-Angestellten}
+
+\section{Diskussionen mit Codeplay-Angestellten}
