--- a/implementierung.tex
+++ b/implementierung.tex
@@ -42,6 +42,10 @@ Datenfeld erhält die Funktion üblicherweise einen Zeiger, z.B. vom Typ
     \item Lösung: Erfolgt, funktioniert über Templates.
 \end{itemize}
 
+\subsection{Besonderheiten für FPGAs}
+
+TODO
+
 \section{Probleme}\label{implementierung:probleme}
 
 Während der Implementierung traten einige Probleme auf, die sich vornehmlich
