--- a/main.tex
+++ b/main.tex
@@ -81,6 +81,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input{einleitung}
+\input{fpga}
 \input{alpaka}
 \input{sycl}
 \input{implementierung}
