--- a/sycl.tex
+++ b/sycl.tex
@@ -93,6 +93,10 @@ lediglich um eine Referenz auf das ursprüngliche Objekt.
 
 \subsection{Profiling}\label{sycl:api:profiling}
 
+\section{Hardware-Abstraktion}\label{sycl:api:abstraktion}
+
+\subsection{GPUs und FPGAs}\label{sycl:api:abstraktion:gpufpga}
+
 \section{Weiterführende Konzepte}\label{sycl:konzepte}
 
 \section{Implementierungen}\label{sycl:implementierungen}
@@ -231,11 +235,6 @@ Grund finden sich in dieser Implementierung einige Erweiterungen, die auf den
 Einsatz von Xilinx-\gls{fpga}s zugeschnitten sind. Diese sind in der
 Header-Datei \texttt{CL/sycl/xilinx/fpga.hpp} definiert und werden in den
 folgenden Abschnitten vorgestellt.
-
-\subsubsection{Feste Gruppengröße}
-\label{sycl:erweiterungen:xilinx:reqd}
-
-TODO: Antwort auf \glqq Warum\grqq\ abwarten.
 
 \subsubsection{Datenflussorientierte Ausführung}
 \label{sycl:erweiterungen:xilinx:dataflow}
