--- a/bibliography.bib
+++ b/bibliography.bib
@@ -54,6 +54,16 @@
     doi = {10.1145/2458523.2458532}
 }
 
+@book{kesel2013,
+    author = {Kesel, Frank and Bartholomä, Ruben},
+    title = {Entwurf von digitalen Schaltungen und Systemen mit HDLs und FPGAs -- Einführung mit VHDL und SystemC},
+    publisher = {Oldenbourg Verlag},
+    year = {2013},
+    edition = {3. Auflage},
+    isbn = {978-3-486-73181-1}
+}
+
+
 @techreport{wong2016,
     author = {Wong, Michael and Richards, Andrew and Rovatsou, Maria and Reyes, Ruyman},
     title = {Khronos's OpenCL SYCL to support Heterogeneous Devices for C++},
@@ -169,6 +179,26 @@
     year = 2019,
     month = jun,
     edition = {UG1253 (v2019.1)},
+    organization = {Xilinx, Inc.},
+    address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
+}
+
+@manual{alveo2019,
+    author = {{Xilinx, Inc.}},
+    title = {Alveo U200 and U250 Data Center Accelerator Cards Data Sheet},
+    year = 2019,
+    month = jun,
+    edition = {DS962 (v1.1)},
+    organization = {Xilinx, Inc.},
+    address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
+}
+
+@manual{ultrascale2019,
+    author = {{Xilinx, Inc.}},
+    title = {UltraScale Architecture and Product Data Sheet: Overview},
+    year = 2019,
+    month = aug,
+    edition = {DS890 (v3.10)},
     organization = {Xilinx, Inc.},
     address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
 }
