--- a/glossar.tex
+++ b/glossar.tex
@@ -7,6 +7,8 @@
 \newacronym{fpga}{FPGA}{\textit{field programmable gate array}}
 \newacronym{gpgpu}{GPGPU}{\textit{general-purpose computing on graphics processing units}}
 \newacronym{gpu}{GPU}{\textit{graphics processing unit}}
+\newacronym{lut}{LUT}{\textit{look-up table}}
+\newacronym{slr}{SLR}{\textit{super logic region}}
 
 \newglossaryentry{cuda}{name = CUDA,
                         description = {GPGPU-Sprache der Firma NVIDIA}}
