--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,7 @@
 \usepackage[english,ngerman]{babel}
 \usepackage[backend=biber,style=alphabetic]{biblatex}
 \usepackage[math]{blindtext}
+\usepackage{booktabs}
 \usepackage{caption}
 \usepackage{csquotes}
 \usepackage{dialogue}
@@ -16,7 +17,11 @@
 \usepackage{nth}
 \usepackage{pdfpages}
 \usepackage{selinput}
+\usepackage[binary-units]{siunitx}
+\usepackage{tablefootnote}
+\usepackage{tabulary}
 \usepackage{tcolorbox}
+\usepackage{tikz}
 
 \addbibresource{bibliography.bib}
 
