Additional FPGA resources

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -44,6 +44,15 @@
     doi = {10.1109/FPL.2006.311203}
 }
 
+@book{hawkins2010,
+    author = {Hawkins, Charles and Segura, Jaume},
+    title = {Introduction to Modern Digital Electronics},
+    year = {2010},
+    publisher = {SciTech Publishing, Inc.},
+    edition = {Preliminary Edition},
+    isbn = {978-1-891-12107-4}
+}
+
 @inproceedings{gaster2013,
     author = {Gaster, Benedict R. and Howes, Lee},
     title = {OpenCL C++},
@@ -121,6 +130,68 @@
     school = {Technische Universität Dresden},
     type = {Bachelorarbeit},
     address = {Fakultät Informatik, Helmholtzstraße 10, 01069 Dresden}
+}
+
+@article{chung2018,
+    author = {Chung, Eric and Fowers, Jeremy and Ovtcharov, Kalin and
+              Papamichael, Michael and Caulfield, Adrian and Massengill, Todd
+              and Liu, Ming and Lo, Daniel and Alkalay, Shlomi and
+              Haselman, Michael and Abeydeera, Maleen and Adams, Logan and
+              Angepat, Hari and Boehn, Christian and Chiou, Derek and
+              Firestein, Oren and Forin, Alessandro and Gatlin, Kan Su and
+              Ghandi, Mahdi and Heil, Stephen and Holohan, Kyle and
+              El Husseini, Ahmad and Juhasz, Tamas and Kagi, Kara and
+              Kovvuri, Ratna K. and Lanka, Sitaram and van Megen, Friedel
+              and Mukhortov, Dima and Patel, Prerak and Perez, Brandon and
+              Rapsang, Amanda Grace and Reinhardt, Steven K. and
+              Rouhani, Bita Darvish and Sapek, Adam and Seera, Raja and
+              Shekhar, Sangeetha and Sridharan, Balaji and Weisz, Gabriel and
+              Woods, Lisa and Xiao, Philip Yi and Zhang, Dan and Zhao, Ritchie
+              and Burger, Doug},
+    title = {Serving DNNs in Real Time at Datacenter Scale with Project
+             Brainwave},
+    year = 2018,
+    month = mar,
+    journal = {IEEE Micro},
+    volume = {Volume 38},
+    number = {Issue 2},
+    pages = {8-20},
+    doi = {10.1109/MM.2018.022071131}
+}
+
+@inproceedings{firestone2018,
+    author = {Firestone, Daniel and Putnam, Andrew and Mundkur, Sambhrama and
+              Chiou, Derek and Dabagh, Alireza and Andrewartha, Mike and
+              Angepat, Hari and Bhanu, Vivek and Caulfield, Adrian and
+              Chung, Eric and Chandrappa, Harish Kumar and Chaturmohta, Somesh
+              and Humphrey, Matt and Lavier, Jack and Lam, Norman and
+              Liu, Fengfen and Ovtcharov, Kalin and Padhye, Jitu and
+              Popuri, Gautham and Raindel, Shachar and Sapre, Tejas and
+              Shaw, Mark and Silva, Gabriel and Sivakumar, Madhan and
+              Srivastava, Nisheeth and Verma, Anshuman and Zuhair, Qasim and
+              Bansal, Deepak and Burger, Doug and Vaid, Kushagra and
+              Maltz, David A. and Greenberg, Albert},
+    title = {Azure Accelerated Networking: SmartNICs in the Public Cloud},
+    year = 2018,
+    month = apr,
+    booktitle = {15th USENIX Symposium on Networked Systems Design and Implementation},
+    pages = {51-64}
+}
+
+@inproceedings{fowers2018,
+    author = {Fowers, Jeremy and Ovtcharov, Kalin and Papamichael, Michael and
+              Massengill, Todd and Liu, Ming and Lo, Daniel and Alkalay, Shlomi
+              and Haselman, Michael and Adams, Logan and Ghandi, Mahdi and
+              Heil, Stephen and Patel, Prerak and Sapek, Adam and Weisz, Gabriel
+              and Woods, Lisa and Lanka, Sitaram and Reinhardt, Steven K. and
+              Caulfield, Adrian M. and Chung, Eric S. and Burger, Doug},
+    title = {A Configurable Cloud-Scale DNN Processor for Real-Time AI},
+    year = 2018,
+    month = jun,
+    booktitle = {Proceedings of the \nth{45} Annual International Symposium on
+                  Computer Architecture},
+    pages = {1-14},
+    doi = {10.1109/ISCA.2018.00012}
 }
 
 @thesis{krebs2019,
