--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
-\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst}
+% \RequirePackage[ngerman=ngerman-x-latest]{hyphsubst}
 \documentclass[english,ngerman,
                abstract=section,abstract=nottotoc,abstract=all,abstract=vfill,
-               declaration=true,declaration=section,declaration=totoc,11pt]{tudscrbook}
+               declaration=true,declaration=section,declaration=totoc]{tudscrbook}
 
 \usepackage[english,ngerman]{babel}
 \usepackage[backend=biber,style=alphabetic]{biblatex}
@@ -12,6 +12,7 @@
 \usepackage{dialogue}
 \usepackage[T1]{fontenc}
 \usepackage[acronyms,nonumberlist,nopostdot,toc,savewrites,xindy]{glossaries}
+\usepackage[ngerman=ngerman-x-latest]{hyphsubst}
 \usepackage{isodate}
 \usepackage[newfloat]{minted}
 \usepackage{nth}
